# transformer_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  program.md
benches/: throughput.rs
src/: attention.rs  config.rs  feedforward.rs  layernorm.rs  lib.rs  loader.rs  main.rs  matrix.rs  rope.rs  transformer.rs
train/: benchmark.py  configs.py  data.py  model.py  pyproject.toml  train.py
